[package]
name = "factory-lib"
description = "Library for modeling logistics in a factory game."
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/richkcho/factory-lib"
categories = ["game-development"]
license = "LGPL-3"

[features]
default = []

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }

[dependencies]
